# agentflow

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: llm.py  main.py  tools.py
src/: api.py  ui.py
src/agents/: data_analysis_agent.py  routes.py  schemas.py  search_agent.py  services.py  utils.py  web_agent.py
src/data/rag/: schema_metadata.csv
src/data/reporting/: dim_user.sql  fact_expenses.sql  fact_travel.sql
src/rag/: config.py  insert_vectors.py  similarity_search.py  vector_store.py
src/tools/: search_tools.py  sql_db.py  tools.py
