[project]
name = "agentflow"
version = "0.1.0"
description = "Agentic flow with langgraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "langchain-anthropic>=0.3.7",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.6",
    "langgraph>=0.2.73",
    "langsmith>=0.3.8",
    "tavily-python>=0.5.1",
]
